<?xml version="1.0" encoding="utf-8"?><!--
  ~ Copyright (c) 2026 Alwin Ibba
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~ http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<resources>
    <string name="label_dialog_snmp_interfaces_snmp_interfaces">SNMP interfaces</string>
    <string name="label_dialog_snmp_interfaces_scan">Scan interfaces</string>
    <string name="label_dialog_snmp_interfaces_show_all">Show all</string>
    <string name="label_dialog_snmp_interfaces_ok">@android:string/ok</string>
    <string name="label_dialog_snmp_interfaces_cancel">@android:string/cancel</string>
    <string name="text_dialog_snmp_interfaces_no_items">Use Scan to load the interfaces</string>
    <string name="text_dialog_snmp_interfaces_no_items_after_scan">The device returned no interfaces</string>
    <string name="text_dialog_snmp_interfaces_no_items_all_filtered">No interfaces to display. Enable Show all to show all interfaces.</string>
    <dimen name="textview_dialog_snmp_interfaces_scan_text_size">14sp</dimen>
</resources>
