...
    <string name="system_oid">1.3.6.1.2.1.1</string>
    <string name="interface_descr_oid">1.3.6.1.2.1.2.2.1.2</string>
    <string name="interface_type_oid">1.3.6.1.2.1.2.2.1.3</string>
    <string name="interface_operstatus_oid">1.3.6.1.2.1.2.2.1.8</string>
    <string name="interface_alias_oid">1.3.6.1.2.1.31.1.1.1.18</string>
    <integer name="interface_operstatus_up">1</integer>
    <string name="interface_operstatus_up_label">Up</string>
    <integer name="interface_operstatus_down">2</integer>
    <string name="interface_operstatus_down_label">Down</string>
    <integer name="interface_operstatus_testing">3</integer>
    <string name="interface_operstatus_testing_label">Testing</string>
    <integer name="interface_operstatus_unknown">4</integer>
    <string name="interface_operstatus_unknown_label">Unknown</string>
    <integer name="interface_operstatus_dormant">5</integer>
    <string name="interface_operstatus_dormant_label">Dormant</string>
    <integer name="interface_operstatus_notpresent">6</integer>
    <string name="interface_operstatus_notpresent_label">NotPresent</string>
...
