...
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/relativelayout_dialog_snmp_interfaces_scan_padding">

                <ImageView
                    android:id="@+id/imageview_dialog_snmp_interfaces_scan"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentTop="true"
                    android:clickable="true"
                    android:focusable="true"
...

            </RelativeLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/cardview_dialog_snmp_interfaces_show_all"
            android:layout_gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/cardview_dialog_snmp_interfaces_show_all_margin"
            app:cardCornerRadius="@dimen/cardview_dialog_snmp_interfaces_show_all_corner_radius"
            app:cardElevation="@dimen/cardview_dialog_snmp_interfaces_show_all_card_elevation"
...

            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/listview_dialog_snmp_interfaces_items"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/listview_dialog_snmp_interfaces_margin"
            android:padding="@dimen/listview_dialog_snmp_interfaces_padding"
            android:layout_gravity="fill_horizontal"
            android:scrollbars="none" />
...
